# claude-debussy

./: .gitignore  README.md  pyproject.toml
.claude/skills/debussy/: SKILL.md
examples/: autumn_leaves.musicxml  bach_chorale.musicxml  barbershop.musicxml  chopin_prelude.musicxml  gen_examples.py  multi_voice.musicxml  polyrhythm.musicxml  pop_ballad.musicxml  structure_demo.musicxml  twinkle.musicxml
src/debussy/: __init__.py  __main__.py  analyze.py  cli.py  importers.py  ops.py  preview.py  render.py  score_io.py  views.py
tests/: conftest.py  test_analyze.py  test_fixtures.py  test_importers.py  test_lyrics.py  test_ops.py  test_preview.py  test_render.py  test_vibe.py  test_views.py
